manifests/overlays/example/acmesolver.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: acme-solver
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - "monitoring/gateway"
  http:
  - name: "acmesolver"
    match:
    - uri:
        prefix: /.well-known/acme-challenge
    route:
    - destination:
        host: cm-acme-http-solver-rnhlm  # NOTE this name will be change, needs to update with latest svc name
        port:
          number: 8089
